[gd_scene load_steps=5 format=3 uid="uid://dsj6psu7vaacw"]

[ext_resource type="Script" path="res://HUD.gd" id="1_4lscq"]
[ext_resource type="FontFile" uid="uid://db85l6roopmjs" path="res://fonts/Xolonium-Regular.ttf" id="2_p84bs"]

[sub_resource type="InputEventKey" id="InputEventKey_qpfku"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_cevvf"]
events = [SubResource("InputEventKey_qpfku")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4lscq")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_p84bs")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Msg" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -81.0
offset_right = 241.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_p84bs")
theme_override_font_sizes/font_size = 64
text = "Dodge the
creeps"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Start" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -183.0
offset_right = 99.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_p84bs")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_cevvf")
text = "Start!"

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="MsgTimer" to="." method="_on_msg_timer_timeout"]
